--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,12 +10,14 @@
     {
       "src": "logo192.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes":"16x16"
+      // "sizes": "192x192"
     },
     {
       "src": "logo512.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes":"16x16"
+      // "sizes": "512x512"
     }
   ],
   "start_url": ".",
